--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,5 @@
+[darglint]
+docstring_style=sphinx
 [flake8]
 ignore =
     W503,
@@ -14,3 +16,8 @@ max-complexity = 10
 [mypy]
 plugins =
   returns.contrib.mypy.returns_plugin
+[tool:pytest] 
+norecursedirs = env/*
+addopts = -vv -p no:cacheprovider -p no:warnings --show-capture=no
+testpaths = tests/
+python_files = test_*.py
